# redis-lab

./: .gitignore  README.md  docker-compose.yml  render.yaml  structure.md
apps/engine/: Cargo.toml  Dockerfile
apps/engine/src/: main.rs
apps/frontend/: Dockerfile  jest.config.js  package-lock.json  package.json  tailwind.config.ts  vercel.json
apps/frontend/__tests__/components/: LocaleSwitcher.test.tsx
apps/frontend/__tests__/components/ui/: StatusBadge.test.tsx
apps/frontend/__tests__/hooks/: useWs.test.tsx
apps/frontend/__tests__/lib/: gateway-url.test.ts
apps/frontend/app/: globals.css  layout.tsx  page.tsx
apps/frontend/components/: IdentityGlitch.tsx  KillSwitchOverlay.tsx  LocaleSwitcher.tsx  OrderBookWaterfall.tsx
apps/frontend/components/ui/: Button.tsx  Card.tsx  StatusBadge.tsx
apps/frontend/contexts/: LocaleContext.tsx
apps/frontend/hooks/: useAuction.ts  useWs.ts
apps/frontend/lib/: gateway-api.ts  gateway-url.ts
apps/frontend/messages/: en.json  zh-TW.json
apps/frontend/types/: i18n.ts
apps/gateway/: Dockerfile  go.mod  main.go  main_test.go
apps/identity/: Cargo.toml  Dockerfile
apps/identity/src/: main.rs
apps/sentinel/: Dockerfile  go.mod  main.go  main_test.go
docs/: deploy-shadow-tunnel.md
src/training-geo-public-master/: README.md
src/training-geo-public-master/geoapp/: app.py  importer.py
src/training-geo-public-master/geoapp/data/: breweries.csv
test/: README.md  run_all.sh
test/robot/: engine_api.robot  gateway_api.robot  identity_api.robot  requirements.txt  variables.robot
(+2 files in other folders)
