[package]
name = "mirage-identity"
version = "0.1.0"
edition = "2021"
description = "身份洗牌矩陣 — 虛擬 ID / Token"

[dependencies]
axum = { version = "0.7", features = ["json"] }
tokio = { version = "1", features = ["full"] }
redis = { version = "0.24", features = ["connection-manager"] }
serde = { version = "1", features = ["derive"] }
tower-http = { version = "0.5", features = ["cors"] }
uuid = { version = "1", features = ["v4"] }
